# cmcl

./: README.org  RFR.py  __init__.py  api.py  data_steward.org  pyproject.toml  test.py
basic_scripts/: RFR.py
cmcl/: __init__.py
cmcl/_utils/: __init__.py  treetools.py
cmcl/codomain/: compute_stability.py
cmcl/compatsk/: _FrameTransformer.py
cmcl/data/: __init__.py  archive.py  base.py  decom_calcs.py  frame.py  handle_cmcl_frame.py  index.py  spyglass.py  utils.py
cmcl/data_handlers/: cmcldf.py
cmcl/database/: cmcldf.py
cmcl/db/: access.py  perovskites.db
cmcl/domain/: __init__.py  _generate_structures.py  _read_constituents.py  _score_structures.py  categories.py  gnn_training.py
cmcl/feature/: FTRZ.py
cmcl/feature_extractors/: FTRZ.py
cmcl/features/: __init__.py  _extract_constituents.py  _extract_metrics.py  _generate_constituents.py  categories.py  extract_categories.py  extract_constituents.py  extract_dummies.py  extract_properties.py
cmcl/material_models/: RFR.py
cmcl/models/: GPR.py  NN.py  RFR.py
cmcl/transforms/: FrameTransformer.py  PCA.py
cmcl/visual/: plot_pairity.py
scripts/: vasp_reader.sh
tests/: ft_RFR.py  ft_RFR_r.py  test.py
