[tool.poetry]
name = "cmcl"
version = "0.1.5"
description = "aggregate chemical formula and measurments, train models, optimize models, predict properties of new chemistries"
authors = ["Panayotis Manganaris <panos.manganaris@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.0"
click = "^8.1.2"
Unidecode = "^1.3.4"
mendeleev = "^0.9.0"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"
ipykernel = "^6.11.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cmcl = "cmcl.api:cli"