[tool.poetry]
name = "cmcl"
version = "0.1.5"
description = "aggregate chemical formula and measurments, compute features for machine learning"
authors = ["Panayotis Manganaris <panos.manganaris@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.7,<3.11"
pandas = ">=1.3.4"
click = "^8.1.2"
Unidecode = "^1.3.4"
mendeleev = "^0.9.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cmcl = "cmcl.api:cli"