[tool.poetry]
name = "cmcl"
version = "0.2.0"
description = "aggregate chemical formula and measurements, compute features for machine learning"
authors = ["Panayotis Manganaris <panos.manganaris@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = ">=1.3.4"
click = "^8.0.0"
Unidecode = "^1.2.0"
mendeleev = "^0.9.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cmcl = "cmcl.cli:cli"